Using routes and fixing information

--- a/src/app/about-me-window/about-me-window.component.html
+++ b/src/app/about-me-window/about-me-window.component.html
@@ -25,5 +25,9 @@
         </article>
       </ng-container>
     </section>
+
+    <div class="home">
+      <app-icon-button iconPath="home.png" title="Home" routerLink=""></app-icon-button>
+    </div>
   </div>
 </div>
