--- a/src/app/about-me-window/who-am-i/who-am-i.component.html
+++ b/src/app/about-me-window/who-am-i/who-am-i.component.html
@@ -23,11 +23,11 @@
     <li><label>📍 Currently living in Maringá - PR, Brazil 🇧🇷</label></li>
 
     <li>
-      <label>🕔 In my spare time, I...</label>
+      <label>🕔 In my spare time, I enjoy...</label>
       <ul>
-        <li><label>💪 Work out</label></li>
-        <li><label>🎮 Play some games</label></li>
-        <li><label>🧑‍💻 Create some weird side projects, such as&nbsp;<b><a href="https://xpquiz.github.io/home">this</a></b></label></li>
+        <li><label>💪 working out</label></li>
+        <li><label>🎮 playing games</label></li>
+        <li><label>🧑‍💻 creating and experimenting with side projects, such as&nbsp;<b><a href="https://xpquiz.github.io/home">XPQuiz</a></b></label></li>
       </ul>
     </li>
   </div>
