--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="windows">
-  <app-about-me-window></app-about-me-window>
-  <app-professional-experience-window></app-professional-experience-window>
-  <app-education-window></app-education-window>
-  <app-contact-window></app-contact-window>
-</div>
-
+<router-outlet></router-outlet>
