--- a/src/app/education-window/education-window.component.sass
+++ b/src/app/education-window/education-window.component.sass
@@ -4,3 +4,21 @@
 .tree-view
   max-height: 200px
   overflow: auto
+
+article
+  height: 200px
+//  display: flex
+//  flex-direction: column
+//  align-items: center
+//  justify-content: center
+
+.home
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+
+  app-icon-button
+    width: 100px
+    margin: 5px
+
