--- a/src/app/home-window/home-window.component.sass
+++ b/src/app/home-window/home-window.component.sass
@@ -1,17 +1,15 @@
 .window
-  width: 350px
+  width: 250px
 
-  article
-    height: 300px
-    overflow: auto
-
-  .home
+  &-body
     display: flex
-    flex-direction: row
+    flex-direction: column
     align-items: center
     justify-content: center
+    margin: 10px 20px 10px 20px
 
     app-icon-button
-      width: 100px
+      width: 100%
       margin: 5px
+
 
