--- a/src/app/professional-experience-window/professional-experience-window.component.sass
+++ b/src/app/professional-experience-window/professional-experience-window.component.sass
@@ -1,6 +1,20 @@
 .window
-  width: 500px
+  width: 400px
 
 .tree-view
-  max-height: 250px
+  height: 200px
+  overflow: auto
+
+.home
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+
+  app-icon-button
+    width: 100px
+    margin: 5px
+
+.description
+  height: 150px
   overflow: auto
