--- a/src/app/about-me-window/what-do-i-do/what-do-i-do.component.html
+++ b/src/app/about-me-window/what-do-i-do/what-do-i-do.component.html
@@ -1,13 +1,16 @@
-<label>
-  🧑‍💻 I'm a software developer, finished my Analysis and Systems Development degree in 2018, and my
-  Java specialization post-degree in 2022.
-</label>
-<label>
-  💼 I've been working with software development since mid-2016, when I first started as an intern.
-</label>
-<label>
-  💻 My work has been focused on developing (back-end systems) most of the time, and partially aiding in
-  technical/requirment analysis and testing back-end systems development, mainly using Java and
-  it's technologies.
-</label>
-
+<div class="content">
+  <label>
+    🧑‍💻 I'm a software developer, finished my Analysis and Systems Development degree in 2018, and my
+    Java specialization post-degree in 2022.
+  </label>
+  <label>
+    💼 I've been working with software development since mid-2016, when I first started as an intern.
+  </label>
+  <label>
+    💻 My work has been focused on developing (back-end systems) most of the time, I also have some experience on the
+    front-end using Angular,
+    and partially aiding in technical/requirment analysis and testing back-end systems development, mainly using Java
+    and
+    its technologies.
+  </label>
+</div>
