--- a/src/app/about-me-window/what-do-i-do/what-do-i-do.component.sass
+++ b/src/app/about-me-window/what-do-i-do/what-do-i-do.component.sass
@@ -1,2 +1,9 @@
-label
-  margin: 5px 0px
+.content
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  height: 100%
+
+  label
+    margin: 5px 0px
