--- a/src/app/contact-window/contact-window.component.sass
+++ b/src/app/contact-window/contact-window.component.sass
@@ -1,5 +1,8 @@
 .window
-  width: 200px
+  width: 300px
+
+  fieldset
+    width: 200px
 
   &-body
     display: flex
@@ -10,3 +13,7 @@
     app-icon-button
       width: 100%
       margin: 3px
+
+      &.home
+        width: 100px
+        margin: 5px
