--- a/src/app/education-window/education-window.component.html
+++ b/src/app/education-window/education-window.component.html
@@ -62,5 +62,8 @@
         </article>
       </ng-container>
     </section>
+    <div class="home">
+      <app-icon-button iconPath="home.png" title="Home" routerLink=""></app-icon-button>
+    </div>
   </div>
 </div>
