--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,10 +3,14 @@
 // For XP
 @import "xp.css/dist/XP.css"
 
-body
+html, body
   background-image: url(assets/images/bliss.jpg)
   background-attachment: fixed
   background-repeat: no-repeat
   background-size: cover
   width: 100%
   height: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
